Bug 497954 - telly-skout showing detailed information much slower since version 24.12.0
Summary: telly-skout showing detailed information much slower since version 24.12.0
Status: RESOLVED FIXED
Alias: None
Product: Telly Skout
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-27 19:21 UTC by Tim B.
Modified: 2024-12-28 13:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim B. 2024-12-27 19:21:09 UTC
SUMMARY
General: Very slow loading of the content of the tv channels since latest version 24.12.0.

STEPS TO REPRODUCE
1. open telly skout
2. choose a TV channel
3. wait much longer compared to all version before for detailed information for the selected content on that channel

OBSERVED RESULT
only on latest version of telly-skout (24.12.0). all version before were much faster loading the content of a tv-channel/selected show/movie

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: latest to this date (happens on version before too)
KDE Plasma Version: latest to this date (happens on version before too)
KDE Frameworks Version: latest to this date (happens on version before too)
Qt Version: latest to this date (happens on version before too)

ADDITIONAL INFORMATION
the problem appears since version 24.12.0
Comment 1 Bug Janitor Service 2024-12-28 13:26:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/telly-skout/-/merge_requests/189
Comment 2 Plata 2024-12-28 13:34:43 UTC
Git commit 076c2eaae424217321b67b528ac31cc8b8ac82b8 by Plata Hill.
Committed on 28/12/2024 at 13:34.
Pushed by plata into branch 'master'.

Speed up program description update

When using TV Spielfilm fetcher, the program description is fetched only after clicking on a program to avoid fetching a lot of descriptions nobody ever reads.

This was slow because it updated the database with the description, reset the complete `ProgramsModel` and re-loaded the program (incl. description) from the database.

Emit a signal with the description and update the model and database (for persistence) in parallel.

FIXED-IN: 24.12.1

M  +4    -4    autotests/fetchertest.cpp
M  +1    -1    src/fetcher.cpp
M  +1    -1    src/fetcher.h
M  +13   -0    src/program.cpp
M  +9    -2    src/program.h
M  +7    -11   src/programsmodel.cpp

https://invent.kde.org/utilities/telly-skout/-/commit/076c2eaae424217321b67b528ac31cc8b8ac82b8
Comment 3 Plata 2024-12-28 13:35:50 UTC
Git commit 56fc3b93748ab23d67c6dfaca47a79e5bd9cfd7e by Plata Hill.
Committed on 28/12/2024 at 13:35.
Pushed by plata into branch 'release/24.12'.

Speed up program description update

When using TV Spielfilm fetcher, the program description is fetched only after clicking on a program to avoid fetching a lot of descriptions nobody ever reads.

This was slow because it updated the database with the description, reset the complete `ProgramsModel` and re-loaded the program (incl. description) from the database.

Emit a signal with the description and update the model and database (for persistence) in parallel.

FIXED-IN: 24.12.1

M  +4    -4    autotests/fetchertest.cpp
M  +1    -1    src/fetcher.cpp
M  +1    -1    src/fetcher.h
M  +13   -0    src/program.cpp
M  +9    -2    src/program.h
M  +7    -11   src/programsmodel.cpp

https://invent.kde.org/utilities/telly-skout/-/commit/56fc3b93748ab23d67c6dfaca47a79e5bd9cfd7e